Vapi Integrated into the Interview Room